1st attempt fixing CSS scrollbar (not fixed)

--- a/SimpleGameIntro/style.css
+++ b/SimpleGameIntro/style.css
@@ -1,11 +1,13 @@
 body {
+
   width: 100%;
   height: 100%;
   background-color: rgb(17, 17, 17);
   color: rgb(26, 26, 26);
   margin: 0px;
-  position: absolute;
+  position: static;
   font-family: monospace;
+  outline: red 1px solid;
 }
 
 .videoOverlay {
@@ -32,14 +34,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 5px;
-  z-index: 10;
+  /* padding: 5px; */
+  z-index: 1000;
 }
 .avatarImage {
   width: 50px;
   height: auto;
   border-radius: 50%;
-  margin: 4px;
+  margin: 8px;
   transition: 0.5s ease;
   transform-origin: top center;
 }
@@ -98,7 +100,7 @@ body {
 }
 .gameCard {
   display: flex;
-  gap: 75px;
+  /* gap: 75px; */
   color: whitesmoke;
   font-size: x-large;
 }
@@ -108,9 +110,9 @@ body {
   font-size: xx-large;
   font-weight: bold;
 }
-.gameInfo {
+/* .gameInfo {
   flex-basis: 800px;
-}
+} */
 .trailerBtn {
   color: white;
   font-size: larger;
